# ShirokumaKunController-rs

./: Cargo.toml  readme.md  socat.sh
.cargo/: config.toml
python/: pub_test.py  venv_setup.sh
src/: ir_tx.rs  main.rs  scd4x.rs  wifi.rs
src/ir_tx/: ir_cmd_gen.rs  mod.rs
src/wifi/: mod.rs  mqtt.rs
