[package]
edition = "2024"
name = "aircon-rs"
version = "0.1.0"
authors = ["zane"]
resolver = "2"

[dependencies]
embassy-rp = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { version = "0.6.2", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb-logger = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git" }
cyw43 = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-net = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4", "dns"] }

embedded-alloc = "0.6.0"
rustls-pemfile = { default-features = false, version = "2.2.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

static_cell = { default-features = false, version = "2.1" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
rand = { version = "0.8.4", default-features = false, features = ["std_rng"] }

thiserror = { version = "2", default-features = false }
heapless = { version = "0.8.0"}
mqttrs = { version = "0.4", default-features = false, git = "https://github.com/00imvj00/mqttrs.git" }
embedded-tls = { default-features = false, git = "https://github.com/drogue-iot/embedded-tls", features = ["defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = 'z'
